Adjust namespaces and folder structures

--- a/Blip/Avalonia/Extensions/Blip.Avalonia.Extensions.csproj
+++ b/Blip/Avalonia/Extensions/Blip.Avalonia.Extensions.csproj
@@ -4,7 +4,11 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <!-- https://github.com/dotnet/msbuild/issues/2661 -->
+    <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
+    <MSBuildEnableWorkloadResolver>false</MSBuildEnableWorkloadResolver>
   </PropertyGroup>
 
   <ItemGroup>
